# drf-carservice

./: .pre-commit-config.yaml  Taskfile.yaml  docker-compose-dev.yaml  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yml
src/authentication/: serializers.py  service.py  urls.py  views.py
src/config/: settings.py  urls.py
src/core/: enums.py  models.py  selializers.py  services.py  views.py
src/core/mixins/: models.py  views.py
src/dealer/: admin.py  exceptions.py  factories.py  filters.py  models.py  tasks.py  tests.py  urls.py  views.py
src/dealer/filters/: dealer_request.py
src/dealer/flows/: dealer_request.py
src/dealer/serializers/: dealer_request.py  dealership.py  inventory.py  promotion.py
src/dealer/services/: dealer_reqeust.py  dealership.py  inventory.py  promotion.py
src/dealer/views/: dealer_request.py  dealership.py  dealership_stat.py  inventory.py  promotion.py
src/order/: admin.py  models.py  tasks.py  urls.py  views.py
src/order/flows/: order.py
src/order/serializers/: customer.py  order.py
src/order/services/: customer.py  order.py
src/order/views/: customer.py  order.py
src/supplier/: admin.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
src/supplier/migrations/: 0003_initial.py
src/supplier/serializers/: car.py  inventory.py  loyalty_discount.py  supplier.py
src/supplier/services/: car.py  inventory.py  loyalty_discount.py  supplier.py
src/supplier/views/: car.py  inventory.py  loyalty_discount.py  supplier.py
